# observability-enhancement-ros

./: .gitignore  CMakeLists.txt  package.xml  package_ros1.xml  package_ros2.xml  setup.cfg  setup.py
data/2024-07-01-22-16-24/OEHG_test/: data.pkl  output.txt
launch/: observability_enhancement.launch
misc/align/: align.py
misc/align/2024-07-02-19-28-30/: align.bag
misc/align/2024-07-04-11-08-36/: align.bag
misc/align/2024-07-04-14-19-51/: align.bag
misc/align/2024-07-04-14-48-31/: align.bag
misc/rtk_test/: 2024-07-07-14-31-49.bag  compare.py  create_bag.py  data.pkl  example_rosbag.bag  position_2024-07-09-11-58-51.bag  position_2024-07-09-15-56-12.bag  rtk_test.py  rtkpkl_test.py
mixPlot/: mixPlot.py
shared/: constants.cpp
src/: EKF.py  GimbalControl.py  MultiRuns.py  PID.py  PlotMultiRuns.py  PlotRepeatRuns.py  PlotSingleRun.py  QuaternionBuffer.py  RepeatRuns.py  TestRun.py  Utils.py
src/GuidanceLaws/: GuidanceLawCommon.py  OEG.py  OEHG.py  OEHG_test.py  PN.py  PN_test.py  RAIM.py
src/models/: DoubleIntegrate.py  FixedWing.py  Iris.py
src/models/M300/: DjiUtils.py  M300.py  Utils.py  libFlightControl.py
